--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
   "bin": {
     "glossld": "./bin/glossld"
   },
-  "dependencies": {
-    "jsonld": "^1.1.0"
-  },
   "devDependencies": {
+    "@babel/preset-env": "^7.1.0",
+    "babel-cli": "^6.26.0",
     "chalk": "^2.4.1",
     "markdown": "^0.5.0",
     "meow": "^5.0.0",
+    "rimraf": "^2.6.2",
     "yaml": "^1.0.0"
   }
 }
